<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">NMedia</string>
    <string name="nmedia" tools:ignore="MissingTranslation">NMedia!</string>
    <string name="avatar_description">avatar desc</string>
    <string name="date">1 may in 08:44</string>
    <string name="authorNameText">Netology. University of Internet Professions</string>
    <string name="content" tools:ignore="MissingTranslation">Hello, this is the new Netology! Once upon a time, Netology began with intensive courses on
        online marketing. Then there were courses on design, development, analytics and management. We grow ourselves and help students grow: from beginners
        to confident professionals. But the most important thing remains with us: we believe that in everyone already has the power to want more, aim higher,
        run faster. Our mission is to help you get on the path of growth and start the chain of change ->http://netolo.gy/fyb</string>
    <string name="remove">Remove</string>
    <string name="description_post_like">Like</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_message">Edit</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_post_save">Save</string>
    <string name="add_post">Save</string>

</resources>