<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/avatar_description"
        app:layout_constraintBottom_toBottomOf="@id/headerBarrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_video" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/authorNameText"
        app:layout_constraintBottom_toTopOf="@id/date"
        app:layout_constraintEnd_toStartOf="@id/options"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/authorName"
        app:layout_constraintStart_toStartOf="@id/authorName"
        app:layout_constraintTop_toBottomOf="@id/authorName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/options"
        style="@style/Widget.App.Button.OptionsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, date, options" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier"
        tools:layout_editor_absoluteX="16dp" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLike"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postBarrier"
        tools:text="100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonShare"
        style="@style/Widget.AppTheme.ShareCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonLike"
        app:layout_constraintTop_toBottomOf="@id/postBarrier"
        tools:text="100" />

      <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buttonVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@color/white"
        android:src="@drawable/ic_baseline_visibility_24"
        app:layout_constraintEnd_toStartOf="@+id/amountVisibility"
        app:layout_constraintStart_toEndOf="@+id/buttonShare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postBarrier" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/amountVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/common_spacing"
        android:text="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonVisibility"
        app:layout_constraintTop_toBottomOf="@id/postBarrier"
        tools:ignore="HardcodedText" />

    <View
        android:id="@+id/video_banner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/image_video"
        app:layout_constraintTop_toBottomOf="@id/buttonShare"/>

    <View
        android:id="@+id/play_video"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:drawable/ic_media_play"
        app:layout_constraintTop_toTopOf="@id/video_banner"
        app:layout_constraintBottom_toBottomOf="@id/video_banner"
        app:layout_constraintStart_toStartOf="@id/video_banner"
        app:layout_constraintEnd_toEndOf="@id/video_banner"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/video_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:constraint_referenced_ids="video_banner, play_video"/>
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/postBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="textPost" />
</androidx.constraintlayout.widget.ConstraintLayout>



